# tol-final-project-backend

./: README.md
worker/: .gitignore  analyses.db  pyproject.toml
worker/docker/: Dockerfile
worker/src/: analyses.db
worker/src/worker/: llmserver.py  misconceptions.py  util.py
worker/src/worker/database/: database.py
worker/src/worker/models/: models.py
